# onnx-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Ubuntu-x64-clang.yml  Ubuntu-x64-gcc.yml  Windows-x64-msvc.yml  Windows-x86-msvc.yml
cmakes/: Base.cmake  CreateFlatHeader.cmake  CreateOnnxFlat.cmake  CreateProtoHeader.cmake  FindProtobuf.cmake
onnx-flat/: base.fbs
onnx-flat/v1.0.1/: onnx.fbs
onnx-flat/v1.10.0/: onnx.fbs
onnx-flat/v1.2.1/: onnx.fbs
onnx-flat/v1.2.3/: onnx.fbs
onnx-flat/v1.4.1/: onnx.fbs
onnx-flat/v1.5.0/: onnx.fbs
onnx-flat/v1.6.0/: onnx.fbs
onnx-flat/v1.7.0/: onnx.fbs
onnx-proto/v1.10.0/: onnx.proto
onnx-proto/v1.4.0/: onnx.proto
onnx-proto/v1.8.0/: onnx.proto
src/: CMakeLists.txt
src/converter/: CMakeLists.txt  main.cpp
src/converter/onnx/: AttributeProto.cpp  AttributeProto.h  FunctionProto.cpp  FunctionProto.h  GraphProto.cpp  GraphProto.h  ModelProto.cpp  ModelProto.h  NodeProto.cpp  NodeProto.h  OperatorSetIdProto.cpp  OperatorSetIdProto.h  SparseTensorProto.cpp  SparseTensorProto.h  StringStringEntryProto.cpp  StringStringEntryProto.h  TensorAnnotation.cpp  TensorAnnotation.h  TensorProto.cpp  TensorProto.h  TensorShapeProto.cpp  TensorShapeProto.h  TrainingInfoProto.cpp  TrainingInfoProto.h  TypeProto.cpp  TypeProto.h  ValueInfoProto.cpp  ValueInfoProto.h  base.h
src/usecase/: CMakeLists.txt  main.cpp
src/usecase/opset/1/: abs.h
